# Semantic-Search

./: .gitignore  README.md  environment.yml  pyproject.toml
semsearch/: __init__.py  cli.py  collections.py  embeddings.py  markdown_ingest.py  models.py  pipeline.py  reranker_worker.py  rerankers.py  retrieval.py  storage.py  tokenize.py  utils.py  vector_index.py
tasks/: lessons.md
tests/: golden_queries.yaml  test_cli_flags.py  test_collections.py  test_embeddings.py  test_markdown_ingest.py  test_storage_and_index.py
